--- a/templates/index.html
+++ b/templates/index.html
@@ -245,10 +245,10 @@ body {
     </p>
 
     <div class="cta">
-      <a href="product_select.html">
+      <a href="{{ url_for('product_select') }}">
         <button class="primary">Start Analysis</button>
       </a>
-      <a href="dash.html">
+      <a href="{{ url_for('dash') }}">
         <button class="secondary">View Example Dashboard</button>
       </a>
     </div>
@@ -277,5 +277,6 @@ body {
 </div>
 </body>
 </html>
+
 
 
