--- a/templates/index.html
+++ b/templates/index.html
@@ -250,7 +250,7 @@ body {
       <a href="{{ url_for('product_select') }}">
         <button class="primary">Start Analysis</button>
       </a>
-      <a href="{{ url_for('dash') }}">
+      <a href="{{ url_for('dashboard_page') }}">
         <button class="secondary">View Example Dashboard</button>
       </a>
     </div>
@@ -279,6 +279,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
