--- a/templates/product_select.html
+++ b/templates/product_select.html
@@ -194,9 +194,10 @@ function goToQuestionnaire() {
     return;
   }
 
-  window.location.href = `${product}_questions.html`;
+ window.location.href = `/${product}_questions`;
 }
 </script>
 
 </body>
 </html>
+
