--- a/templates/product_select.html
+++ b/templates/product_select.html
@@ -181,7 +181,7 @@ button:hover {
   <button onclick="goToQuestionnaire()">Start Smart Analysis</button>
 
   <div class="back">
-    <a href="index.html">← Back to Home</a>
+    <a href="{{ url_for('home') }}">← Back to Home</a>
   </div>
 </div>
 
@@ -200,4 +200,5 @@ function goToQuestionnaire() {
 
 </body>
 </html>
+
 
