Refactor laptop_questions.html for improved structure

--- a/templates/laptop_questions.html
+++ b/templates/laptop_questions.html
@@ -290,10 +290,13 @@ function calculateResult(){
 }
 
 function goToAnalysis(){
-  window.location.href="analysis.html";
+  const brand = localStorage.getItem("recommendedBrand");
+  window.location.href = `/results/laptop/${brand}`;
+}
 }
 
 </script>
 
 </body>
 </html>
+
