--- a/templates/mobile_questions.html
+++ b/templates/mobile_questions.html
@@ -292,10 +292,13 @@ function calculateResult(){
 }
 
 function goToAnalysis(){
-  window.location.href="analysis.html";
+  const brand = localStorage.getItem("recommendedBrand");
+  window.location.href = `/results/mobile/${brand}`;
+
 }
 
 </script>
 
 </body>
 </html>
+
