--- a/templates/headphones_questions.html
+++ b/templates/headphones_questions.html
@@ -288,10 +288,13 @@ function calculateResult(){
 }
 
 function goToAnalysis(){
-  window.location.href="analysis.html";
+  const brand = localStorage.getItem("recommendedBrand");
+  window.location.href = `/results/headphones/${brand}`;
+
 }
 
 </script>
 
 </body>
 </html>
+
