--- a/templates/mobile_questions.html
+++ b/templates/mobile_questions.html
@@ -14,7 +14,7 @@
 
 body{
   min-height:100vh;
-  background:url("bg_image.png") no-repeat center/cover fixed;
+  background:url("{{ url_for('static', filename='bg_image.png') }}") no-repeat center/cover fixed;
   color:#E5E7EB;
 }
 
@@ -301,4 +301,5 @@ function goToAnalysis(){
 
 </body>
 </html>
+
 
