Refactor HTML structure and styles for headphones quiz

--- a/templates/headphones_questions.html
+++ b/templates/headphones_questions.html
@@ -288,14 +288,12 @@ function calculateResult(){
 }
 
 function goToAnalysis(){
-  const brand = localStorage.getItem("recommendedBrand");
-  window.location.href = `/results/headphones/${brand}`;
-
+  window.location.href="/analysis";
 }
-
 </script>
 
 </body>
 </html>
+
 
 
