Refactor laptop_questions.html structure and styles

--- a/templates/laptop_questions.html
+++ b/templates/laptop_questions.html
@@ -290,14 +290,14 @@ function calculateResult(){
 }
 
 function goToAnalysis(){
-  const brand = localStorage.getItem("recommendedBrand");
-  window.location.href = `/results/laptop/${brand}`;
+  window.location.href="/analysis";
 }
-}
+
 
 </script>
 
 </body>
 </html>
+
 
 
