--- a/templates/smart_questions.html
+++ b/templates/smart_questions.html
@@ -248,12 +248,12 @@ function calculateResult(){
 }
 
 function goToAnalysis(){
-  const brand = localStorage.getItem("recommendedBrand");
-  window.location.href = `/results/smart/${brand}`;
+  window.location.href="/analysis";
 }
 
 </script>
 
 </body>
 </html>
+
 
