--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -14,7 +14,7 @@
 
 body {
   min-height: 100vh;
-  background: url("bg_image.png") no-repeat center/cover fixed;
+  background: url("{{ url_for('static', filename='bg_image.png') }}") no-repeat center/cover fixed;
   color: #E5E7EB;
 }
 
@@ -200,7 +200,7 @@ select {
 </div>
 
 <div class="back">
-  <a href="index.html">← Back to Home</a>
+<a href="{{ url_for('home') }}">← Back to Home</a>
 </div>
 
 </div>
@@ -240,10 +240,11 @@ function startAnalysis() {
   }
 
   // DIRECTLY OPEN FLASK DYNAMIC PAGE
-  window.location.href = `http://127.0.0.1:5000/results/${category}/${brand}`;
+ window.location.href = `/results/${category}/${brand}`;
 }
 
 </script>
 
 </body>
 </html>
+
