--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -201,7 +201,7 @@ canvas {
 </div>
 
 <div class="footer">
-  <a href="index.html">← Back to Home</a>
+   <a href="{{ url_for('home') }}">← Back to Home</a>
 </div>
 
 </div>
@@ -362,3 +362,4 @@ data.keywords.forEach(word => {
   </p>
   <span>All Rights Reserved | Built with Data, Emotion & Intelligence</span>
 </footer>
+
